@@ -47,7 +47,8 @@ class compteActions extends sfActions
     public function executeNew(sfWebRequest $request)
     {
         $this->form = new CompteForm();
-        $this->form->setDefault('mis_a_jour_par', $this->getUser()->getUserId());
+        $this->form->setDefault('enregistre_par', $this->getUser()->getUserId());
+        $this->form->setDefault('association_id', $this->getUser()->getAssociationId());
     }
 
     /**
@@ -59,7 +60,6 @@ class compteActions extends sfActions
     {
         $this->forward404Unless($request->isMethod('post'));
         $this->form = new CompteForm();
-        $this->form->setDefault('mis_a_jour_par', $this->getUser()->getUserId());
         $this->processForm($request, $this->form);
         $this->setTemplate('new');
     }
@@ -92,7 +92,6 @@ class compteActions extends sfActions
         $this->forward404Unless($request->isMethod('post') || $request->isMethod('put'));
         $this->forward404Unless($compte = ComptePeer::retrieveByPk($request->getParameter('id')), sprintf('Object compte does not exist (%s).', $request->getParameter('id')));
         $this->form = new CompteForm($compte);
-        $this->form->setDefault('mis_a_jour_par', $this->getUser()->getUserId());
         $this->processForm($request, $this->form);
         $this->redirect('compte/index');
     }
